--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,20 @@
-body{
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    font-family: 'Open Sans', sans-serif;
 }
 
-header{
-    text-align: center;
+img {
+    width:100%;
+    height: 100%;
 }
 
-section{
-    background: url("https://img.freepik.com/vector-premium/fondo-vertical-degradado-suave-ilustracion-vectorial_522680-306.jpg");
-    padding-top: 60px;
+.fas {
+    color: black;
 }
 
-div.header{
-    padding: 15px;
+#home {
+    background: white;
 }
 
-.div.header h2{
-    margin: 0;
-    font-size: 20px;
-}
-
-.front .top .date{
-    float: right;
-    margin: 0;
-}
-
-.front{
-    background-color: white;
-    width: 600px;
-    margin: auto;
-    margin-bottom: 60px;
-    margin-top: 60px;
-    border: 1px solid white;
-    border-radius: 5px;
-}
-
-img{
-    width: 100%;
-}
-
-div.description{
-    padding: 15px;
+#nav-pills {
+    background: white;
 }
